--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
             </div>
         </div>
     </section>
-    <section class="container">
+    <section class="container danhmuc-tinrao">
         <div class="row">
             <div class="col-sm-12 col-lg-12 dntc">
                 <h3><i class="fas fa-paw"></i> Danh mục thú cưng</h3>
@@ -299,7 +299,7 @@
       </div>
     </section>
     <!-- main -->
-    <section class="container dm-thucung">
+    <section class="container tinrao-container">
         <div class="row">
             <div class="col-sm-12 col-lg-12 dntc">
                 <h3 style="color: #573f1e;"><i class="fas fa-award"></i> Tin rao nổi bật</h3>
@@ -505,7 +505,7 @@
             </div>
         </div>
     </section>
-    <section class="container box-line">
+    <section class="container tinrao-container box-line">
       <hr>
         <div class="row">
           <div class="col-sm-5 col-lg-5 dntc">
@@ -731,7 +731,7 @@
       <a href="">Cửa hàng</a>
     </div>
     </section>
-    <section class="container">
+    <section class="container tinrao-container">
       <div class="col-sm-12">
         <h2 class="txt-title" style="text-align: center;">Cẩm nang thú cưng</h2>
       </div>
