--- a/index.html
+++ b/index.html
@@ -15,16 +15,16 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body class="">
-	<header class="container-fluid">
+	<header class="container-fluid header_rp">
 		<nav class="navbar navbar-expand-lg navbar-lightd">
-	  	<a class="navbar-brand" href="#"><img src="images/logo/logow.png" width="250px" height="70px"></a>
+	  	<a class="navbar-brand logohinh" href="#"><img src="images/logo/logow.png" width="250px" height="70px"></a>
 	  	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
     	<span class="navbar-toggler-icon"></span>
   		</button>
         <div class="collapse navbar-collapse khung-timkiem" id="navbarText">
                 <ul class="navbar-nav mr-auto">
-                <form class="form-inline my-2 my-lg-0">
-                    <input class="form-control mr-sm-2 box-search" type="search" placeholder="Tìm kiếm trên petshop.vn" aria-label="Search">
+                <form class="form-inline my-2 my-lg-0 tk_auto ">
+                    <input class="form-control mr-sm-2 box-search" type="search" placeholder="Tìm kiếm..." aria-label="Search">
                     <div class="testdrop">
                         <p onclick="hamDropdown()" class="my-2 my-sm-0 timkiem btn">thú cưng <i class="fas fa-angle-down"></i></p>
                         <div class="box-chon">
@@ -95,7 +95,7 @@
                 </span>
             </div>
         </nav>
-    <div class="col-lg-12">
+    <div class="col-lg-12 menu_rp">
         <ul class="nav menu-title">
             <li class="nav-item mm-chinh">
               <a class="nav-link" href="#">Chó<i class="fas fa-angle-down"></i></a>
@@ -749,7 +749,6 @@
                 <a href="#" class="btn btn-light form-control">Xem chi tiết</a>
               </div>
           </div>
-          </div>
         </div>
         <div class="col-sm-4">
           <div class="card t-tin">
@@ -814,6 +813,29 @@
             </div>
         </div>
     </footer>
+    <section class="container-fluid header-repon">
+      <div class="row">
+        <div class="box-rp">
+          <center><a href="#"><i class="fas fa-paw icon-rp"></i></a></center>
+        </div>
+        <div class="box-rp">
+          <center><a href="#"><i class="fas fa-user-shield icon-rp"></i></a></center>
+        </div>
+        <div class="box-rp">
+          <center class="box-rp-item">
+            <a href="#" class="a-dangtin">
+            <i class="fas fa-file-alt icon-rp" style="margin-top: 30px;"></i>
+            <br> Đăng bài</a>
+          </center>
+        </div>
+        <div class="box-rp">
+          <center><a href="#"><i class="fas fa-newspaper icon-rp"></i></a></center>
+        </div>
+        <div class="box-rp">
+          <center><a href="#"><i class="fas fa-align-justify icon-rp"></i></a></center>
+        </div>
+      </div>
+    </section>
 
 </body>
 </html>
